# fakebot

./: CMakeLists.txt  FakeBot.cpp  FakeBot.h  LICENSE  README  README.md  getWorld.h  main.cpp
doc/: main.dox
include/: FakeBot.h
src/: CMakeLists.txt  FakeBot.cpp  getWorld.cpp  main.cpp
